[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/env/tileset_legacy.png" type="Texture" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/env/roguelikeSheet_transparent.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=4]
5/name = "basic Wall"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 306, 0, 50, 84 )
5/tile_mode = 1
5/autotile/bitmask_mode = 0
5/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 4, Vector2( 0, 3 ), 69, Vector2( 0, 4 ), 321, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 5, Vector2( 1, 3 ), 261, Vector2( 1, 4 ), 324, Vector2( 2, 0 ), 64, Vector2( 2, 1 ), 65, Vector2( 2, 2 ), 1 ]
5/autotile/icon_coordinate = Vector2( 1, 1 )
5/autotile/tile_size = Vector2( 16, 16 )
5/autotile/spacing = 1
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 5 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Water"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 84, 50 )
6/tile_mode = 1
6/autotile/bitmask_mode = 0
6/autotile/bitmask_flags = [ Vector2( 0, 1 ), 69, Vector2( 0, 2 ), 321, Vector2( 1, 1 ), 261, Vector2( 1, 2 ), 324, Vector2( 2, 0 ), 256, Vector2( 2, 1 ), 260, Vector2( 2, 2 ), 4, Vector2( 3, 0 ), 320, Vector2( 3, 1 ), 325, Vector2( 3, 2 ), 5, Vector2( 4, 0 ), 64, Vector2( 4, 1 ), 65, Vector2( 4, 2 ), 1 ]
6/autotile/icon_coordinate = Vector2( 3, 1 )
6/autotile/tile_size = Vector2( 16, 16 )
6/autotile/spacing = 1
6/autotile/occluder_map = [  ]
6/autotile/navpoly_map = [  ]
6/autotile/priority_map = [  ]
6/autotile/z_index_map = [  ]
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "swiming pool"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 51, 84, 50 )
7/tile_mode = 1
7/autotile/bitmask_mode = 0
7/autotile/bitmask_flags = [ Vector2( 0, 0 ), 69, Vector2( 0, 1 ), 321, Vector2( 1, 0 ), 261, Vector2( 1, 1 ), 324, Vector2( 2, 0 ), 256, Vector2( 2, 1 ), 260, Vector2( 2, 2 ), 4, Vector2( 3, 0 ), 320, Vector2( 3, 1 ), 325, Vector2( 3, 2 ), 5, Vector2( 4, 0 ), 64, Vector2( 4, 1 ), 65, Vector2( 4, 2 ), 1 ]
7/autotile/icon_coordinate = Vector2( 0, 0 )
7/autotile/tile_size = Vector2( 16, 16 )
7/autotile/spacing = 1
7/autotile/occluder_map = [  ]
7/autotile/navpoly_map = [  ]
7/autotile/priority_map = [  ]
7/autotile/z_index_map = [  ]
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Red Flower"
8/texture = ExtResource( 5 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 102, 84, 50 )
8/tile_mode = 1
8/autotile/bitmask_mode = 0
8/autotile/bitmask_flags = [ Vector2( 0, 0 ), 69, Vector2( 0, 1 ), 321, Vector2( 1, 0 ), 261, Vector2( 1, 1 ), 324, Vector2( 2, 0 ), 256, Vector2( 2, 1 ), 260, Vector2( 2, 2 ), 4, Vector2( 3, 0 ), 320, Vector2( 3, 1 ), 325, Vector2( 3, 2 ), 5, Vector2( 4, 0 ), 64, Vector2( 4, 1 ), 65, Vector2( 4, 2 ), 1 ]
8/autotile/icon_coordinate = Vector2( 3, 1 )
8/autotile/tile_size = Vector2( 16, 16 )
8/autotile/spacing = 1
8/autotile/occluder_map = [  ]
8/autotile/navpoly_map = [  ]
8/autotile/priority_map = [  ]
8/autotile/z_index_map = [  ]
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "White Flower"
9/texture = ExtResource( 5 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 153, 84, 50 )
9/tile_mode = 1
9/autotile/bitmask_mode = 0
9/autotile/bitmask_flags = [ Vector2( 0, 0 ), 69, Vector2( 0, 1 ), 321, Vector2( 1, 0 ), 261, Vector2( 1, 1 ), 324, Vector2( 2, 0 ), 256, Vector2( 2, 1 ), 260, Vector2( 2, 2 ), 4, Vector2( 3, 0 ), 320, Vector2( 3, 1 ), 325, Vector2( 3, 2 ), 5, Vector2( 4, 0 ), 64, Vector2( 4, 1 ), 65, Vector2( 4, 2 ), 1 ]
9/autotile/icon_coordinate = Vector2( 3, 1 )
9/autotile/tile_size = Vector2( 16, 16 )
9/autotile/spacing = 1
9/autotile/occluder_map = [  ]
9/autotile/navpoly_map = [  ]
9/autotile/priority_map = [  ]
9/autotile/z_index_map = [  ]
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Dirt"
10/texture = ExtResource( 5 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 85, 119, 84, 101 )
10/tile_mode = 1
10/autotile/bitmask_mode = 1
10/autotile/bitmask_flags = [ Vector2( 0, 0 ), 184, Vector2( 0, 1 ), 178, Vector2( 0, 2 ), 255, Vector2( 0, 3 ), 507, Vector2( 0, 4 ), 18, Vector2( 0, 5 ), 24, Vector2( 1, 0 ), 154, Vector2( 1, 1 ), 58, Vector2( 1, 2 ), 447, Vector2( 1, 3 ), 510, Vector2( 1, 4 ), 144, Vector2( 1, 5 ), 48, Vector2( 2, 0 ), 176, Vector2( 2, 1 ), 50, Vector2( 2, 2 ), 432, Vector2( 2, 3 ), 438, Vector2( 2, 4 ), 54, Vector2( 2, 5 ), 186, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 26, Vector2( 3, 2 ), 504, Vector2( 3, 3 ), 511, Vector2( 3, 4 ), 63, Vector2( 3, 5 ), 16, Vector2( 4, 0 ), 146, Vector2( 4, 1 ), 56, Vector2( 4, 2 ), 216, Vector2( 4, 3 ), 219, Vector2( 4, 4 ), 27, Vector2( 4, 5 ), 511 ]
10/autotile/icon_coordinate = Vector2( 3, 5 )
10/autotile/tile_size = Vector2( 16, 16 )
10/autotile/spacing = 1
10/autotile/occluder_map = [  ]
10/autotile/navpoly_map = [  ]
10/autotile/priority_map = [  ]
10/autotile/z_index_map = [  ]
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[node name="main" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 720926, 5, 0, 720927, 5, 1, 720928, 5, 1, 720929, 5, 1, 720930, 5, 1, 720931, 5, 2, 786462, 5, 131072, 786463, 5, 131073, 786464, 5, 196609, 786465, 5, 65537, 786466, 5, 65537, 786467, 5, 65538, 852000, 5, 65536, 852001, 5, 196608, 852002, 5, 131073, 852003, 5, 131074, 852005, 3, 65537, 917536, 5, 65536, 917537, 5, 65538, 917539, 3, 0, 917540, 3, 1, 917541, 3, 1, 917542, 3, 2, 983072, 5, 65536, 983073, 5, 65538, 983074, 3, 0, 983075, 3, 65540, 983076, 3, 65537, 983077, 3, 3, 983078, 3, 131074, 1048606, 5, 0, 1048607, 5, 1, 1048608, 5, 262145, 1048609, 5, 262144, 1048610, 5, 1, 1048611, 5, 2, 1048612, 3, 131073, 1048613, 3, 131074, 1114142, 5, 65536, 1114143, 5, 65537, 1114144, 5, 65537, 1114145, 5, 65537, 1114146, 5, 65537, 1114147, 5, 65538, 1179678, 5, 65536, 1179679, 5, 65537, 1179680, 5, 65537, 1179681, 5, 65537, 1179682, 5, 196608, 1179683, 5, 131074, 1245214, 5, 65536, 1245215, 5, 65537, 1245216, 5, 65537, 1245217, 5, 196608, 1245218, 5, 131074, 1245219, 3, 2, 1310750, 5, 131072, 1310751, 5, 131073, 1310752, 5, 131073, 1310753, 5, 131074, 1310754, 3, 65537, 1310755, 3, 65538, 1376283, 3, 0, 1376284, 3, 1, 1376285, 3, 2, 1376287, 3, 65536, 1376288, 3, 65537, 1376289, 3, 3, 1376290, 3, 131073, 1376291, 3, 131074, 1441818, 3, 0, 1441819, 3, 65540, 1441820, 3, 65537, 1441821, 3, 65539, 1441822, 3, 1, 1441823, 3, 65540, 1441824, 3, 3, 1441825, 3, 131074, 1507352, 3, 0, 1507353, 3, 1, 1507354, 3, 65540, 1507355, 3, 3, 1507356, 3, 131073, 1507357, 3, 131073, 1507358, 3, 131073, 1507359, 3, 131073, 1507360, 3, 131074, 1572888, 3, 131072, 1572889, 3, 131073, 1572890, 3, 131073, 1572891, 3, 131074 )

[node name="Start" type="Button" parent="."]
margin_left = 400.0
margin_top = 48.0
margin_right = 484.0
margin_bottom = 90.0
text = "Start"

[node name="Stop" type="Button" parent="."]
margin_left = 604.0
margin_top = 32.0
margin_right = 688.0
margin_bottom = 74.0
text = "stop"

[node name="Reset" type="Button" parent="."]
margin_left = 775.0
margin_top = 50.0
margin_right = 859.0
margin_bottom = 92.0
text = "reset"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
